--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -6,5 +6,25 @@
 <body>
     <div id="imageContainer"></div>
     <script src="popup.js"></script>
+</body>
+</html><!DOCTYPE html> -->
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.5.0/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.0.2/jszip-utils.min.js" crossorigin="anonymous"></script>
+</head>
+<body class="OptimusPrime">
+  <!-- <button id="downloadAll">Download All</button> -->
+  <div class="headerDiv">
+    <button class="headerButton imageButton">Images <i class="fa-solid fa-image"></i></button>
+    <button class="headerButton">Fonts <i class="fa-solid fa-font"></i></button>
+    <button class="headerButton">Colors <i class="fa-solid fa-palette"></i></button>
+    <button class="headerButton">Media <i class="fa-solid fa-folder"></i></button>
+  </div>
+  <div id="imageContainer"></div>
+  <script src="popup.js"></script>
 </body>
 </html>
