--- a/popup.html
+++ b/popup.html
@@ -19,10 +19,10 @@
 <body class="OptimusPrime">
   <!-- <button id="downloadAll">Download All</button> -->
   <div class="headerDiv">
-    <button class="headerButton imageButton">Images <i class="fa-solid fa-image"></i></button>
-    <button class="headerButton">Fonts <i class="fa-solid fa-font"></i></button>
-    <button class="headerButton">Colors <i class="fa-solid fa-palette"></i></button>
-    <button class="headerButton">Media <i class="fa-solid fa-folder"></i></button>
+    <button class="headerButton imageButton" id="imagePick">Images <i class="fa-solid fa-image"></i></button>
+    <button class="headerButton" id="fontPick">Fonts <i class="fa-solid fa-font"></i></button>
+    <button class="headerButton" id="colorPick">Colors <i class="fa-solid fa-palette"></i></button>
+    <button class="headerButton" id="mediaPick">Media <i class="fa-solid fa-folder"></i></button>
   </div>
   <div id="imageContainer"></div>
   <script src="popup.js"></script>
