--- a/popup.html
+++ b/popup.html
@@ -9,22 +9,45 @@
 </body>
 </html><!DOCTYPE html> -->
 <html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.5.0/jszip.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.0.2/jszip-utils.min.js" crossorigin="anonymous"></script>
-</head>
-<body class="OptimusPrime">
-  <!-- <button id="downloadAll">Download All</button> -->
-  <div class="headerDiv">
-    <button class="headerButton imageButton" id="imagePick">Images <i class="fa-solid fa-image"></i></button>
-    <button class="headerButton" id="fontPick">Fonts <i class="fa-solid fa-font"></i></button>
-    <button class="headerButton" id="colorPick">Colors <i class="fa-solid fa-palette"></i></button>
-    <button class="headerButton" id="mediaPick">Media <i class="fa-solid fa-folder"></i></button>
-  </div>
-  <div id="imageContainer"></div>
-  <script src="popup.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.5.0/jszip.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.0.2/jszip-utils.min.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="OptimusPrime">
+    <!-- <button id="downloadAll">Download All</button> -->
+    <div class="headerDiv" id="headerDiv">
+      <button class="headerButton imageButton" id="imagePick">
+        Images <i class="fa-solid fa-image"></i>
+      </button>
+      <button class="headerButton" id="fontPick">
+        Fonts <i class="fa-solid fa-font"></i>
+        <p class="infoText" id="fontText">
+          <i class="fa-solid fa-circle-info"></i> Press on the font to copy</p>
+      </button>
+      <button class="headerButton" id="colorPick">
+        Colors <i class="fa-solid fa-palette"></i>
+        <p class="infoText" id="infoText">
+          <i class="fa-solid fa-circle-info"></i> Press on the color to copy</p>
+      </button>
+      <button class="headerButton" id="mediaPick">
+        Media <i class="fa-solid fa-folder"></i>
+      </button>
+      <p class="copiedText" id="copiedText">Copied to clipboard</p>
+    </div>
+
+    <div id="imageContainer"></div>
+    <script src="popup.js"></script>
+  </body>
 </html>
